examples/test/testpolicy9980.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9980
  namespace: namespace191
spec:
  podSelector:
    matchLabels:
      key38: value0
      key33: value31
      key21: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value0
      podSelector:
        matchLabels:
          key46: value45
          key24: value36
